force-app/main/default/objects/Staff__c/fields/Class_Teacher_To__c.field-meta.xml
<CustomField>
    <fullName>Class_Teacher_To__c</fullName>
    <label>Class Teacher To</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>VIII Standard</fullName>
            </value>
            <value>
                <fullName>IX Standard</fullName>
            </value>
            <value>
                <fullName>X Standard</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>