force-app/main/default/objects/Staff__c/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <label>Department</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Science</fullName>
            </value>
            <value>
                <fullName>General Studies</fullName>
            </value>
            <value>
                <fullName>Mathematics</fullName>
            </value>
            <value>
                <fullName>English</fullName>
            </value>
            <value>
                <fullName>Administration</fullName>
            </value>
            <value>
                <fullName>Accounts</fullName>
            </value>
            <value>
                <fullName>Sports</fullName>
            </value>
            <value>
                <fullName>Computer</fullName>
            </value>
            <value>
                <fullName>Drawing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>