force-app/main/default/objects/Staff__c/fields/Number_Of_Students__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_Students__c</fullName>
    <label>Number Of Students</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>