force-app/main/default/objects/Staff__c/fields/SportName__c.field-meta.xml
<CustomField>
    <fullName>SportName__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SportName</label>
    <referenceTo>Sport__c</referenceTo>
    <relationshipLabel>Staff</relationshipLabel>
    <relationshipName>Staff</relationshipName>
    <type>Lookup</type>
</CustomField>