force-app/main/default/objects/Staff__c/fields/Staff_Contact_Number__c.field-meta.xml
<CustomField>
    <fullName>Staff_Contact_Number__c</fullName>
    <label>Staff Contact Number</label>
    <type>Phone</type>
</CustomField>