force-app/main/default/objects/Staff__c/fields/Staff_ID__c.field-meta.xml
<CustomField>
    <fullName>Staff_ID__c</fullName>
    <label>Staff ID</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>