force-app/main/default/objects/Staff__c/recordTypes/Non_Teaching.recordType-meta.xml
<RecordType>
    <fullName>Non_Teaching</fullName>
    <active>true</active>
    <label>Non Teaching</label>
</RecordType>