force-app/main/default/objects/Staff__c/recordTypes/Teaching.recordType-meta.xml
<RecordType>
    <fullName>Teaching</fullName>
    <active>true</active>
    <label>Teaching</label>
</RecordType>